--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.35.3",
+    "@clerk/react-router": "^1.8.4",
+    "@react-router/dev": "^7.7.0",
     "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.7.0",
     "react-router-dom": "^7.7.0",
     "tailwindcss": "^4.1.11"
   },
